load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")
load("@rules_java//java:defs.bzl", "java_binary")
load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_library", "wpilib_cc_static_library")
load("//shared/bazel/rules:java_rules.bzl", "wpilib_java_library")
load("//shared/bazel/rules:packaging.bzl", "package_default_cc_shared_static_only_project")

wpilib_cc_library(
    name = "cameraserver",
    srcs = glob(["src/main/native/cpp/**"]),
    hdrs = glob(["src/main/native/include/**/*"]),
    includes = [
        "cpp",
        "src/main/native/include",
    ],
    strip_include_prefix = "src/main/native/include",
    visibility = ["//visibility:public"],
    deps = [
        "//cscore",
        "//ntcore",
    ],
)

wpilib_cc_static_library(
    name = "static/cameraserver",
    static_deps = [
        "//cscore:static/cscore",
        "//ntcore:static/ntcore",
    ],
    visibility = ["//visibility:public"],
    deps = [":cameraserver"],
)

wpilib_java_library(
    name = "cameraserver-java",
    srcs = glob(["src/main/java/**/*.java"]),
    maven_artifact_name = "cameraserver-java",
    maven_group_id = "edu.wpi.first.cameraserver",
    visibility = ["//visibility:public"],
    deps = [
        "//cscore:cscore-java",
        "//hal:hal-java",
        "//ntcore:ntcore-java",
        "//wpimath:wpimath-java",
        "//wpinet:wpinet-java",
        "//wpiutil:wpiutil-java",
        "@bzlmodrio-opencv//libraries/java/opencv",
    ],
)

cc_test(
    name = "cameraserver-cpp-test",
    size = "small",
    srcs = glob(["src/test/native/**"]),
    deps = [
        ":cameraserver",
        "//thirdparty/googletest",
    ],
)

cc_binary(
    name = "DevMain-Cpp",
    srcs = ["src/dev/native/cpp/main.cpp"],
    deps = [
        ":cameraserver",
    ],
)

java_binary(
    name = "DevMain-Java",
    srcs = ["src/dev/java/edu/wpi/first/cameraserver/DevMain.java"],
    main_class = "edu.wpi.first.cameraserver.DevMain",
    deps = [
    ],
)

# TODO shared
package_default_cc_shared_static_only_project(
    name = "cameraserver",
    classifier_artifacts = {
        "headers": ":cameraserver-hdrs-zip",
        # "linuxsystemcore": ":cameraserver_shared_zip-opt-systemcore",
        # "linuxsystemcoredebug": ":cameraserver_shared_zip-dbg-systemcore",
        # "linuxsystemcorestatic": ":cameraserver_static_zip-opt-systemcore",
        # "linuxsystemcorestaticdebug": ":cameraserver_static_zip-dbg-systemcore",
        "sources": ":cameraserver-srcs-zip",
    },
    linux_artifacts = {
        # "linuxx86-64": ":cameraserver_shared_zip-opt-linux-x86-64",
        # "linuxx86-64debug": ":cameraserver_shared_zip-dbg-linux-x86-64",
        "linuxx86-64static": ":cameraserver_static_zip-opt-linux-x86-64",
        "linuxx86-64staticdebug": ":cameraserver_static_zip-dbg-linux-x86-64",
    },
    maven_artifact_name = "cameraserver-cpp",
    maven_group_id = "edu.wpi.first.cameraserver",
    osx_artifacts = {
        # "osxuniversal": ":cameraserver_shared_zip-opt-osxuniversal",
        # "osxuniversaldebug": ":cameraserver_shared_zip-dbg-osxuniversal",
        "osxuniversalstatic": ":cameraserver_static_zip-opt-osxuniversal",
        "osxuniversalstaticdebug": ":cameraserver_static_zip-dbg-osxuniversal",
    },
    windows_artifacts = {
        # "windowsarm64": ":cameraserver_shared_zip-opt-windows-arm64",
        # "windowsarm64debug": ":cameraserver_shared_zip-dbg-windows-arm64",
        "windowsarm64static": ":cameraserver_static_zip-opt-windows-arm64",
        "windowsarm64staticdebug": ":cameraserver_static_zip-dbg-windows-arm64",
        # "windowsx86-64": ":cameraserver_shared_zip-opt-windows-x86-64",
        # "windowsx86-64debug": ":cameraserver_shared_zip-dbg-windows-x86-64",
        "windowsx86-64static": ":cameraserver_static_zip-opt-windows-x86-64",
        "windowsx86-64staticdebug": ":cameraserver_static_zip-dbg-windows-x86-64",
    },
)
