load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@aspect_bazel_lib//lib:copy_directory.bzl", "copy_directory")
load("@bzlmodrio-opencv//libraries/cpp/opencv:libraries.bzl", "opencv_shared_libraries")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")
load("@rules_java//java:defs.bzl", "java_binary")
load("//cscore:robotpy_pybind_build_info.bzl", "cscore_extension", "define_pybind_library", "publish_library_casters")
load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_library", "wpilib_cc_shared_library", "wpilib_cc_static_library")
load("//shared/bazel/rules:java_rules.bzl", "wpilib_java_junit5_test")
load("//shared/bazel/rules:jni_rules.bzl", "wpilib_jni_cc_library", "wpilib_jni_java_library")
load("//shared/bazel/rules:objectivec_rules.bzl", "wpilib_objc_library")
load("//shared/bazel/rules:packaging.bzl", "package_minimal_jni_project")
load("//shared/bazel/rules/robotpy:build_info_gen.bzl", "generate_robotpy_native_wrapper_build_info", "generate_robotpy_pybind_build_info")
load("//shared/bazel/rules/robotpy:semiwrap_tool_helpers.bzl", "create_yaml_files", "scan_headers")

WIN_SRCS = glob([
    "src/main/native/windows/**/*.cpp",
    "src/main/native/windows/**/*.h",
])

LINUX_SRCS = glob([
    "src/main/native/linux/**/*.cpp",
    "src/main/native/linux/**/*.h",
])

MAC_SRCS = glob(["src/main/native/osx/**/*.cpp"])

filegroup(
    name = "native-srcs",
    srcs = select({
        "@platforms//os:osx": MAC_SRCS,
        "@platforms//os:windows": WIN_SRCS,
        "@rules_bzlmodrio_toolchains//constraints/combined:is_linux": LINUX_SRCS,
    }),
)

wpilib_objc_library(
    name = "cscore-mac",
    srcs = glob([
        "src/main/native/objcpp/**/*.mm",
        "src/main/native/cpp/*.h",
    ]),
    hdrs = glob([
        "src/main/native/include/**/*",
        "src/main/native/objcpp/**/*.h",
    ]),
    include_arc = False,
    includes = [
        "src/main/native/cpp",
        "src/main/native/include",
        "src/main/native/objcpp",
    ],
    sdk_frameworks = [
        "CoreFoundation",
        "AVFoundation",
        "Foundation",
        "CoreMedia",
        "CoreVideo",
        "IOKit",
    ],
    deps = [
        "//wpinet",
        "//wpiutil",
        "@bzlmodrio-opencv//libraries/cpp/opencv",
    ],
)

wpilib_cc_library(
    name = "cscore",
    srcs = [":native-srcs"] + glob(
        ["src/main/native/cpp/**"],
        exclude = ["src/main/native/cpp/jni/**"],
    ),
    hdrs = glob(["src/main/native/include/**/*"]),
    extra_src_pkg_files = [
        ":cscore-java-jni-hdrs-pkg",
    ],
    includes = [
        "src/main/native/cpp",
        "src/main/native/include",
    ],
    strip_include_prefix = "src/main/native/include",
    visibility = ["//visibility:public"],
    deps = [
        "//wpinet",
        "//wpiutil",
        "@bzlmodrio-opencv//libraries/cpp/opencv",
    ] + select({
        "@platforms//os:osx": [":cscore-mac"],
        "//conditions:default": [],
    }),
)

sdk_framework_flags = [
    "-framework",
    "Metal",
    "-framework",
    "MetalKit",
    "-framework",
    "Cocoa",
    "-framework",
    "IOKit",
    "-framework",
    "CoreFoundation",
    "-framework",
    "AVFoundation",
    "-framework",
    "Foundation",
    "-framework",
    "CoreMedia",
    "-framework",
    "CoreVideo",
    "-framework",
    "QuartzCore",
]

wpilib_cc_shared_library(
    name = "shared/cscore",
    additional_linker_inputs = select({
        "@platforms//os:osx": [":cscore-mac"],
        "//conditions:default": [],
    }),
    dynamic_deps = [
        "//wpinet:shared/wpinet",
        "//wpiutil:shared/wpiutil",
    ] + opencv_shared_libraries,
    user_link_flags = select({
        "@platforms//os:osx": [
            "-Wl,-force_load,$(location :cscore-mac)",
        ] + sdk_framework_flags,
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":cscore",
    ],
)

wpilib_cc_static_library(
    name = "static/cscore",
    static_deps = [
        "//wpinet:static/wpinet",
        "//wpiutil:static/wpiutil",
    ],
    visibility = ["//visibility:public"],
    deps = [":cscore"],
)

wpilib_jni_cc_library(
    name = "cscorejni",
    srcs = glob(["src/main/native/cpp/jni/**"]),
    java_dep = ":cscore-java",
    visibility = ["//visibility:public"],
    deps = [
        ":cscore",
    ],
)

wpilib_cc_shared_library(
    name = "shared/cscorejni",
    dynamic_deps = [
        ":shared/cscore",
        "//wpiutil:shared/wpiutil",
    ],
    use_debug_name = False,
    visibility = ["//visibility:public"],
    deps = [":cscorejni"],
)

wpilib_cc_shared_library(
    name = "shared/cscorejnicvstatic",
    additional_linker_inputs = select({
        "@platforms//os:osx": [":cscore-mac"],
        "//conditions:default": [],
    }) + [
        ":src/main/native/LinuxSymbolScript.txt",
        ":src/main/native/MacSymbolScript.txt",
    ],
    dynamic_deps = [
        "//wpinet:shared/wpinet",
        "//wpiutil:shared/wpiutil",
    ],
    user_link_flags = select({
        "@platforms//os:linux": [
            "-Wl,-soname,libcscorejnicvstatic.so",
            "-Wl,--version-script=$(location :src/main/native/LinuxSymbolScript.txt)",
        ],
        "@platforms//os:osx": [
            "-Wl,-install_name,libcscorejnicvstatic.so",
            "-exported_symbols_list",
            "$(location :src/main/native/MacSymbolScript.txt)",
        ],
        "//conditions:default": [],
    }) + select({
        "@platforms//os:osx": [
            "-Wl,-force_load,$(location :cscore-mac)",
        ] + sdk_framework_flags,
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":cscore",
        ":cscorejni",
    ],
)

wpilib_jni_java_library(
    name = "cscore-java",
    srcs = glob(["src/main/java/**/*.java"]),
    maven_artifact_name = "cscore-java",
    maven_group_id = "edu.wpi.first.cscore",
    native_libs = [":cscorejni"],
    visibility = ["//visibility:public"],
    deps = [
        "//wpiutil:wpiutil-java",
        "@bzlmodrio-opencv//libraries/java/opencv",
    ],
)

cc_test(
    name = "cscore-cpp-test",
    size = "small",
    srcs = glob(["src/test/native/**"]),
    deps = [
        ":cscore",
        "//thirdparty/googletest",
    ],
)

wpilib_java_junit5_test(
    name = "cscore-java-test",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        ":cscore-java",
        "//wpiutil:wpiutil-java",
    ],
)

cc_binary(
    name = "DevMain-Cpp",
    srcs = ["src/dev/native/cpp/main.cpp"],
    deps = [
        ":cscore",
    ],
)

java_binary(
    name = "DevMain-Java",
    srcs = ["src/dev/java/edu/wpi/first/cscore/DevMain.java"],
    main_class = "edu.wpi.first.cscore.DevMain",
    deps = [
        ":cscore-java",
        "//wpiutil:wpiutil-java",
    ],
)

[wpilib_cc_library(
    name = example + "-examples",
    srcs = glob([
        "examples/" + example + "/*.cpp",
    ]),
    tags = [
        "wpi-example",
    ],
    deps = [
        "//cscore",
        "//wpigui",
        "@bzlmodrio-opencv//libraries/cpp/opencv",
    ],
) for example in [
    "enum_usb",
    "httpcvstream",
    "settings",
    "usbcvstream",
    "usbstream",
    "usbviewer",
]]

package_minimal_jni_project(
    name = "cscore",
    maven_artifact_name = "cscore-cpp",
    maven_group_id = "edu.wpi.first.cscore",
)

alias(
    name = "cscorejnicvstatic-hdrs-zip",
    actual = "cscore-hdrs-zip",
)

alias(
    name = "cscorejnicvstatic-srcs-zip",
    actual = "cscore-srcs-zip",
)

filegroup(
    name = "headers",
    srcs = glob(["src/main/native/include/**/*"]),
)

copy_to_directory(
    name = "cscore.copy_headers",
    srcs = glob(["src/main/native/include/**"]) + ["//cameraserver:headers"],
    out = "src/main/python/lib/include",
    replace_prefixes = {
        "cameraserver/src/main/native/include": "",
        "cscore/src/main/native/include": "",
    },
    root_paths = ["src/main/native/include/"],
    verbose = True,
    visibility = ["//visibility:public"],
)

# copy_directory(
#     name = "cscore.copy_headers2",
#     src = "cscore.copy_headers",
#     out = "src/main/python/lib/include2",
#     # replace_prefixes = {
#     #     "cameraserver/src/main/native/include": "",
#     #     "cscore/src/main/native/include": "",
#     # },
#     # root_paths = ["src/main/native/include/"],
#     verbose = True,
#     visibility = ["//visibility:public"],
# )

PKG_CONFIG_DEPS = [
        "//datalog:native/datalog/robotpy-native-datalog.pc",
        "//datalog:src/main/python/wpilog/wpilog.pc",
        "//ntcore:src/main/python/ntcore/ntcore.pc",
        "//ntcore:native/ntcore/robotpy-native-ntcore.pc",
        "//wpinet:native/wpinet/robotpy-native-wpinet.pc",
        "//wpinet:src/main/python/wpinet/wpinet.pc",
        "//wpiutil:native/wpiutil/robotpy-native-wpiutil.pc",
        "//wpiutil:src/main/python/wpiutil/wpiutil.pc",
        "//wpiutil:src/main/python/wpiutil/wpiutil-casters.pc",
        "//wpiutil:src/main/python/wpiutil/wpiutil-casters.pybind11.json",
    ]

# generate_robotpy_pybind_build_info(
#     name = "robotpy-cscore-generator",
#     additional_srcs = [":cscore.copy_headers"],
#     # additional_srcs = ["//cameraserver:headers", ":headers"],
#     package_root_file = "src/main/python/cscore/__init__.py",
#     pkgcfgs = PKG_CONFIG_DEPS,
#     yaml_files = glob(["src/main/python/semiwrap/*.yml"]),
# )

publish_library_casters()

cscore_extension(
    srcs = glob(["src/main/python/cscore/**/*.cpp"]),
    extra_hdrs = glob(["src/main/native/include/**/*"]),
    header_to_dat_deps = [":headers"],
)

define_pybind_library(
    name = "robotpy-cscore",
)

create_yaml_files(
    name = "robotpy-create-yaml",
    package_root_file = "src/main/python/cscore/__init__.py",
    extra_hdrs = glob(["src/main/native/include/**/*"]) + ["cscore.copy_headers"] + ["//cameraserver:headers", ":headers"],
    pkgcfgs = PKG_CONFIG_DEPS,
    pyproject_toml = "src/main/python/pyproject.toml",
    yaml_files = glob(["src/main/python/semiwrap/**"]),
)

# scan_headers(
#     name = "robotpy-scan-headers",
#     extra_hdrs = glob(["src/main/native/include/**/*"]) + ["cscore.copy_headers"] + ["//cameraserver:headers", ":headers"],
#     package_root_file = "src/main/python/cscore/__init__.py",
#     pkgcfgs = PKG_CONFIG_DEPS,
#     pyproject_toml = "src/main/python/pyproject.toml",
# )
